--- a/Bhuvanesh/Card/package.json
+++ b/Bhuvanesh/Card/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest --verbose",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@shopify/flash-list": "1.6.3",
@@ -25,6 +26,7 @@
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "react-devtools": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "jest": {
