--- a/Nikhil Naik/ListDesignApp/package.json
+++ b/Nikhil Naik/ListDesignApp/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "test": "jest",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-reanimated": "^3.6.2"
@@ -19,6 +24,10 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["./jest-setup.js"]
   },
   "private": true
 }
