--- a/Bhuvanesh/MMV_Make/package.json
+++ b/Bhuvanesh/MMV_Make/package.json
@@ -6,19 +6,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "verbose": true,
+  "setupFilesAfterEnv": ["./jest-setup.js"]
   },
   "private": true
 }
