--- a/Nikhil Naik/ListDesignApp/package.json
+++ b/Nikhil Naik/ListDesignApp/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/flash-list": "^1.6.3",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
     "expo": "~50.0.6",
@@ -27,7 +28,9 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFilesAfterEnv": ["./jest-setup.js"]
+    "setupFilesAfterEnv": [
+      "./jest-setup.js"
+    ]
   },
   "private": true
 }
