Revert "API data + ScrollToIndex"
This reverts commit dd78af7cd635cb7e0bce042fb4c969d6e7103847.

--- a/Nikhil Naik/ListDesignApp/package.json
+++ b/Nikhil Naik/ListDesignApp/package.json
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@shopify/flash-list": "^1.6.3",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
     "expo": "~50.0.6",
@@ -28,9 +27,7 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFilesAfterEnv": [
-      "./jest-setup.js"
-    ]
+    "setupFilesAfterEnv": ["./jest-setup.js"]
   },
   "private": true
 }
