--- a/Bhuvanesh/MMV_Make/package.json
+++ b/Bhuvanesh/MMV_Make/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/flash-list": "^1.6.3",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
@@ -28,7 +29,9 @@
   "jest": {
     "preset": "jest-expo",
     "verbose": true,
-  "setupFilesAfterEnv": ["./jest-setup.js"]
+    "setupFilesAfterEnv": [
+      "./jest-setup.js"
+    ]
   },
   "private": true
 }
