--- a/Nikhil Naik/ListDesignApp/package.json
+++ b/Nikhil Naik/ListDesignApp/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "enzyme": "^3.11.0",
     "typescript": "^5.1.3"
   },
   "jest": {
